Fix some header search bar layout bug

--- a/src/renderer/assets/_variables.scss
+++ b/src/renderer/assets/_variables.scss
@@ -4,4 +4,6 @@ $music-set-card-width: $music-set-card-height !default;
 
 $music-player-height: 90px !default;
 
+$layout-header-search-padding: 16px !default;
+
 @import "~material-design-lite/src/variables";
